--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "document-register-element": "^1.7.2",
     "fs-extra": "^8.1.0",
     "rxjs": "~6.4.0",
+    "serialize-javascript": "^2.1.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
